@@ -1,5 +1,7 @@
 *SVN*
 
+* Subversion module recognizes the password prompt for HTTP authentication
+
 * Preserve +x on scripts when using darcs #1929 [Scott Barron]
 
 * When executing multiline commands, use a backslash to escape the newline
